feat: load favorited campaign count and donation count in profile sidebar
